# upload-depcloud

./: Cargo.toml
src/: aws.rs  main.rs
