[package]
name = "upload-depcloud"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
git2 = "0.14"
tokio = { version = "1", features = ["full"] }
rusoto_core = "0.47"
rusoto_s3 = "0.47"
futures = "0.3"
dotenv = "0.15.0"
